aws-eks-flask-app/terraform/modules/vpc/main.tf
resource "aws_vpc" "this" {
    cidr_block = var.cidr_block
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = "${var.env}-vpc"
    }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.this.id
    tags = {
        Name = "${var.env}-igw"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.this.id
    count = length(var.public_subnet_cidr)
    cidr_block = var.public_subnet_cidr[count.index]
    availability_zone = element(var.az, count.index)
    map_public_ip_on_launch = true
    tags = {
        Name = "${var.env}-public-subnet"
    }
}

resource "aws_route_table" "public" {
   vpc_id = aws_vpc.this.id
   tags = {
      Name = "${var.env}-public-route-table"
   }
}

resource "aws_route_table_association" "public_access"{
    count = length(aws_subnet.public)
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_subnet" "private" {
    vpc_id = aws_vpc.this.id
    count = length(var.private_subnet_cidr)
    cidr_block = var.private_subnet_cidr[count.index]
    availability_zone = element(var.az, count.index)
    tags = {
      Name = "${var.env}-private-subnet"
    }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.env}-private-route-table"
  }
}

resource "aws_route_table_association" "private_access"{
    count = length(aws_subnet.private)
    subnet_id = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
}

resource "aws_route" "public_route" {
    route_table_id = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
}

resource "aws_eip" "nat" {
    domain = vpc
    depends_on = [aws_internet_gateway.igw]
    tags = {
      Name = "${var.env}-eip"
    }
}

resource "aws_nat_gateway" "ngw" {
    allocation_id = aws_eip.nat.allocation_id
    subnet_id = aws_subnet.public[0].id
    depends_on = [ aws_internet_gateway.igw ]
    tags = {
        Name = "${var.env}-ngw"
    }
}

resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.ngw.id
}
